fix overflow

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,12 +1,12 @@
 #app {
   max-width: 1000px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 5px;
   font-weight: normal;
 }
 
 .ext-title {
-  font-size: 40px;
+  font-size: 30px;
 }
 
 .footer {
